examples/errors/esem2.c
int main ()
{
	int e1, e2, e3;
	
	e1 = suma (e1, e2);
}

